[package]
name = "qsv"
version = "0.3.1"
edition = "2021"
description = "A fast, flexible, and memory-efficient command-line tool written in Rust for processing large CSV files."
authors = ["sumeshi <sum3sh1@protonmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
comfy-table = "7.1"
# Used for file logging
fast_log = "1.6"
# Used for progress bar
indicatif = "0.17.7"
# Used for command line arguments parsing
clap = { version = "4.4", features = ["derive"] }
# Used for serde support for chrono
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
quick-xml = { version = "0.31", features = ["serialize"] }
serde-xml-rs = "0.6"
polars = { version = "0.48.1", features = ["lazy", "csv", "temporal", "strings", "regex", "moment", "describe"] }
regex = "1.9"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
glob = "0.3"
encoding_rs = "0.8.32"
once_cell = "1"
flate2 = "1.0"