[package]
name = "qsv"
version = "0.3.6"
edition = "2021"
description = "A fast, flexible, and memory-efficient command-line tool written in Rust for processing large CSV files."
authors = ["sumeshi <sum3sh1@protonmail.com>"]
license = "MIT"

[dependencies]
comfy-table = "7.1"
# Used for serde support for chrono
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde-xml-rs = "0.6"
polars = { version = "0.48.1", features = ["lazy", "csv", "temporal", "strings", "regex", "moment", "describe"] }
regex = "1.9"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
log = "0.4"
env_logger = "0.10"
glob = "0.3"
once_cell = "1"
flate2 = "1.0"
dtparse = "2.0"